--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                                                             <!--<i class="pe-7s-glasses"></i>-->
                                                             <img src="images/site/icon-01.png" alt="image"/>
                                                             <h4>Web Developer</h4>
-                                                            /*<p>I can responsive websites. It is a long established fact that a reader will be attracted by the readable content.</p>*/
+                                                            <p>I do have strong knowledge in web design and development I use photohsop, css3, html5, xhtml, cross browser compiled layout. As well for programming php, mysql, wordpress. I tried to attached few of my websites designed by me in my portfolio.</p>
                                                         </div>
                                                         <!-- service -->
                                         
@@ -223,7 +223,7 @@
                                                             <!--<i class="pe-7s-joy"></i>-->
                                                             <img src="images/site/icon-02.png" alt="image"/>
                                                             <h4>Graphic design</h4>
-                                                            /*<p>I can design different type of graphic design and logo design. It is a long established fact that a people will be attracted.</p>*/
+                                                            <p>I can design different type of graphic design and logo design. It is a long established fact that a people will be attracted.</p>
                                                         </div>
                                                         <!-- service -->
                                         
